1.4.2
- Change: Restructured the configuration options. The sorting does now
  make more sense than before.
- Bugfix: No helptext displayed for readonly cookie config.
- Bugfix: The Hans skin render their name twice.

1.4.1
- Added class constants analysis.
- Added the possibility to remove message keys from the message class
- Change: Search is now case-insensitive. This should make searching
  much more easy.
- Change: Output destination can not be changed anymore via the cookie
  editor by default. This should prevent people from locking themselves
  out.
- Cleanup: Cleaned up the object analysis as well as the namespace
  usage.
- Bugfix: Removed hardcoded logfolder path in the bootstrap phase.

1.4.0
- Added smoky-grey as the new standard skin.
- Added some primary formatting to the Hans skin to prevent the host
  system from messing with the css formatting of the skin.
- Added the SkinRender class to the skin directory, so every skin can
  do some special stuff.
- Added rudimentary translation support for the messaging class.
- Added minimized js libraries for smaller frontend output.
- Change: Cleaned up rendering process.
- Change: Removed the useless array nest from the traversable info, to
  produce a better readability.
- Bugfix: Removed the jQuery library. ReqireJS should now work normally
  when used on the frontend.
- Bugfix: Generated sourcecode now works with IteratorAggregate when
  trying to access a single element from the iterator.
- Bugfix: Configured debugging methods will not be called anymore,
  if they require a parameter.
- Bugfix: Prevent the calling of configured debug methods which are
  callable, but do not exist thanks to the __call() function.
- Bugfix / Change: When kreXX encounters an emergency break, the
  frontend configuration will be accessible, giving the dev the
  opportunity to change the settings.
- Bugfix: Fixed an issue with the benchmarking, when the dev has
  forgotten to start the timer.