@@ -118,7 +118,22 @@
      text-align: left;
     }
     .krexx-logs td {
-      padding-right: 30px;
+      padding-right: 25px;
+      padding-left: 5px;
+      border-top: 1px solid #dadada;
+      vertical-align: top;
+    }
+    .krexx-logs th {
+      padding-left: 5px;
+    }
+    table.noborder {
+      vertical-align: middle;
+    }
+    .noborder td {
+      border: none;
+      margin: 0;
+      padding: 0;
+      padding-right: 10px;
     }
   </style>
   <script type="text/javascript">
